2014-01-06  Carl Hetherington  <cth@carlh.net>

	* Basics of per-channel audio gain (#247).

	* Give a warning on make DCP if it seems unlikely that the disk
	will have enough space to store the finished DCP (#92).

	* Make sure forced languages override the environment for gettext()
	as well as wxWidgets' i18n code (#108).

	* Bump libdcp version to get a fix for VOLINDEX/ASSETMAP file extensions
	with interop (#206).

	* Fix subtitle colouring (#152).

	* Fix mis-timed subtitles when there is a non-zero video PTS offset.

	* Remove seemingly unnecessary checks on image directories.

	* Leave DCP directory creation until the last minute to help
	avoid half-eaten directories being left around (#174).

2014-01-05  Carl Hetherington  <cth@carlh.net>

	* Version 1.57 released.

2014-01-05  Carl Hetherington  <cth@carlh.net>

	* Use _fseeki64 on Windows when reading content files.

	* Various small fixes to i18n.

2014-01-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.56 released.

2014-01-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.55 released.

2014-01-03  Carl Hetherington  <cth@carlh.net>

	* New de_DE translation from Markus Raab.

	* Work-around mysterious call of pure virtual method inside boost.

2014-01-01  Carl Hetherington  <cth@carlh.net>

	* Bump ffmpeg version.

2013-12-30  Carl Hetherington  <cth@carlh.net>

	* Version 1.54 released.

2013-12-30  Carl Hetherington  <cth@carlh.net>

	* Put catches around a few threads which could have uncaught exceptions.

	* Add nascent dcpomatic_create command-line program to create films.

2013-12-29  Carl Hetherington  <cth@carlh.net>

	* Version 1.53 released.

2013-12-29  Carl Hetherington  <cth@carlh.net>

	* Fix failure to load content from directories with non-Latin names.

2013-12-28  Carl Hetherington  <cth@carlh.net>

	* Speculative fix for "find missing" not working on OS X (#255).

	* Fix failure to load films with missing still image content (#300).
