@@ -1,3 +1,7 @@
+2014-01-07  Carl Hetherington  <cth@carlh.net>
+
+	* Allow still-moving-image sources to have their frame rate specified.
+
 2014-01-06  Carl Hetherington  <cth@carlh.net>
 
 	* Basics of per-channel audio gain (#247).
